crates/elenchus-parser/tests/snapshots/errors__axiom_implication_missing_then.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"AXIOM wings_need_bone:\\n    WHEN Creature.A has flying\\nCHECK Creature.A\\n\")"
---
Syntax Error at line 3, col 1: expected THEN to complete the WHEN ... THEN implication
  | CHECK Creature.A
  | ^--- here
